--- a/QuizApp/QuizApp/ios/Podfile
+++ b/QuizApp/QuizApp/ios/Podfile
@@ -77,6 +77,8 @@ target 'QuizApp' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'QuizAppTests' do
     inherit! :complete
     # Pods for testing
